FIXED PAGE WORKING ON MOBILE
i changed the text size units from pixels to percentage and it fixed it

--- a/OtherPages.css
+++ b/OtherPages.css
@@ -114,7 +114,7 @@ body{
 .content{
     
     color:black;
-    font-size: 20px;
+    font-size: 400%;
     font-family: monospace;
     margin-left: 2%;
     margin-right:30%;
